# metakit-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release-python.yml  release-typescript.yml
docs/: PUBLISHING.md
e2e/: .gitignore  README.md  config.example.json
e2e/go/: go.mod  send_currency_tx.go
e2e/java/: pom.xml
e2e/java/src/main/java/: SendCurrencyTx.java
e2e/python/: send_currency_tx.py
e2e/rust/: Cargo.toml
e2e/rust/src/: main.rs
e2e/typescript/: send_currency_tx.ts
scripts/: validate-versions.sh
shared/: currency_transaction_vectors.json  json_logic_test_vectors.json  test_vectors.json
