[package]
name = "send_currency_tx"
version = "0.1.0"
edition = "2021"

[dependencies]
constellation-metagraph-sdk = { path = "../../packages/rust", features = ["network"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
